#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(nul, 0.1)
AM_INIT_AUTOMAKE(nul, 0.1)
AC_CONFIG_SRCDIR([nul.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
